--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="composite">
     <div id="banner">
-<a href="https://nasa-pds-incubator.github.io/pds4-jparser/" id="bannerLeft"><img src="images/pds4_logo.png"  alt=""/></a>
+<a href="https://github.com/NASA-PDS-Incubator/pds4-jparser" id="bannerLeft"><img src="images/pds4_logo.png"  alt=""/></a>
 <div id="bannerRight">
 PDS4 JParser
 </div>
@@ -29,7 +29,7 @@ PDS4 JParser
         <span id="publishDate">Last Published: 2019-08-14</span>
           &nbsp;| <span id="projectVersion">Version: 1.1.0</span>
       </div>
-      <div class="xright"><a href="https://nasa-pds-incubator.github.io/pds4-jparser/index.html" class="externalLink" title="PDS4 JParser">PDS4 JParser</a>      </div>
+      <div class="xright"><a href="https://github.com/NASA-PDS-Incubator/pds4-jparser" class="externalLink" title="PDS4 JParser">PDS4 JParser</a>      </div>
       <div class="clear">
         <hr/>
       </div>
